Have fixed gap between board and sequences

--- a/src/ui/app.css
+++ b/src/ui/app.css
@@ -5,7 +5,7 @@
   height: 100%;
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 400px 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas: 
     ". . ."
